fix: removed default overflow as it interferes with sticky, it is now a utility class

--- a/src/utilities/layout-utilities.less
+++ b/src/utilities/layout-utilities.less
@@ -255,3 +255,7 @@
 .no-wrap {
   white-space: nowrap !important;
 }
+
+.overflow-horizontal {
+  overflow-x: auto;
+}
